--- a/css/style-main.css
+++ b/css/style-main.css
@@ -2,6 +2,10 @@ a {
     color: #186634;
 }
 
+a:hover {
+    color: #083418;
+}
+
 .navbar {
     width: 100%;
     height: 60px;
@@ -131,6 +135,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .subject h1 {
     padding-bottom: 10px;
+}
+
+h2.title {
+    font: 32px/1.1 chaparral-pro,serif !important;
 }
 
 .content .description {
@@ -417,4 +425,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .ribbon-green:after {
     right: 0;
+}
+
+ul.normal {
+    list-style: initial;
+}
+ul.normal li {
+    margin: 5px 0 5px 40px;
 }
